9.6.8 (ws)
      - added qt script debug to build system
6.6.8 (ws)
      - Transpose key in new wizard for transposing instruments.
        Example: tenor sax sounds 14 semitones lower than notated,
        if the score is c major, then the tenor sax staff is created with
        two sharps (d major).
5.6.8  (ws)
      - automatically move end bar line when appending new measure(s)
      - automatically create end bar line in "new wizard"
      - allow *.mscz files as template files
      - refresh QDirModel before showing templates list to also show new
        created templates
4.6.8  (ws)
      - testfile articulation.msc shows violin staff with switch between
        "pizzicato" and "arco" using two channels
3.6.8  (ws)
      - new (incomplete) midi structure; a part (all staves for one instrument)
        can use more than one midi channel configurable in the instruments.xml
        file. The channels are used for different articulations of that instrument
        (example pizzicato for strings).
25.5.8 (ws)
      - fix dynamics text
      - changed layout of note heads in stem down chord
24.5.8 (ws)
      - plugins: add script bindings for qt base, gui, network, xml and uitools
23.5.8 (ws)
      - play transposition was not applied to all note off events
      - in "open" dialog show both *.msc and *.mscz files
      - in "save" dialog default to *.mscz file format
      - note stems are now editable
22.5.8 (ws)
      - adapt ledger line length for grace notes
21.5.8 (ws)
      - set smaller beams for grace notes
      - reduce distances for grace notes
      - more compact layout for mid measure clefs
20.5.8 (ws)
      - fixes for tremolo (i was totally wrong on how tremolo of two notes
        works)
      - glissando can now cross measure boundaries
19.5.8 (ws)
      - new: tremolo signs between notes
      - fix measure reapeat layout for staff != 1
18.5.8 (ws)
      - new: glissando
16.5.8 (ws)
      - new button to toggle note entry mode
14.5.8 (ws)