@@ -3,7 +3,7 @@
 #  Linux Music Score Editor
 #  $Id:$
 #
-#  Copyright (C) 2002-2007 by Werner Schweer and others
+#  Copyright (C) 2002-2008 by Werner Schweer and others
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License version 2.
@@ -34,8 +34,8 @@ endif (MINGW)
 # build qt script bindings
 # this requires qt >= 4.4
 
-#set(BUILD_SCRIPT_INTERFACE FALSE)
-set(BUILD_SCRIPT_INTERFACE TRUE)
+set(BUILD_SCRIPT_INTERFACE FALSE)
+#set(BUILD_SCRIPT_INTERFACE TRUE)
 
 set(BUILD_SCRIPT_DEBUG FALSE)
 #set(BUILD_SCRIPT_DEBUG TRUE)
